src/main/java/semantic/abstractSintaxTree/test/passing/nilClass.ru
struct A {}
impl A { .() {} }

start {
    A a;
    a = nil;
}
