src/main/java/semantic/abstractSintaxTree/test/failing/arrayAccessInNotArray.ru
/? VariableIsNotArrayException
struct A {
    Int num;
} impl A{ .(){}}

start {
    A a;

    a = new A();

    (IO.out_int(a[0]));
}